--- a/index.html
+++ b/index.html
@@ -6,12 +6,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <!-- favicon img -->
-  <link rel="shortcut icon" href="#" type="image/x-icon">
+  <link rel="shortcut icon" href="./static/imgs/png/favicon-32x32.png" type="image/x-icon">
   <!-- css links -->
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  
+  <div class="container">
+    <div class="card">
+      <div class="img">
+        <img src="./static/imgs/jpg/image-product-desktop.jpg" alt="card img" class="card-img">
+      </div>
+      <div class="card-info">
+        <h4 class="first-title">
+          PERFUME
+        </h4>
+        <h1 class="title">
+          Gabrielle Essence Eau De Parfum
+        </h1>
+        <p class="info">
+          A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of Chanel.
+        </p>
+        <div class="price">
+          <h2 class="first-price">
+            $149.99
+          </h2>
+          <del class="del-price">
+            169.99
+          </del>
+        </div>
+        <button class="btn">
+          <img src="./static/svg/icon-cart.svg" alt="btn img" class="btn-img">
+          Add to Cart
+        </button>
+      </div>
+    </div>
+  </div>
 </body>
 </html> 
